Content updates from Alex Muggah, and corrected some minor layout problems.

--- a/css/style.scss
+++ b/css/style.scss
@@ -104,7 +104,6 @@ h1.special {
             position: absolute;
             display: block;
             height: 1px;
-            background: #e8e8e8;
             width: 99999999px;
             top: 50%;
             transform: translateY(-50%);
